[tool.poetry]
name = "autospeedguard"
version = "0.1.0"
description = ""
authors = ["Sergei Volchkov <c4s23@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.31.0"
opencv-python = "^4.9.0.80"
ultralytics = "^8.1.9"
opencv-python-headless = "^4.9.0.80"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
